# Dynamic-Cloth

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile_commands.json  dynamic_cloth.sln
debug/: CMakeCache.txt  Dynamic-Cloth  Makefile  cmake_install.cmake
dynamic_cloth/: EventHandler.cpp  EventHandler.h  cloth_connectivity  cloth_generator.py  cloth_points  cloth_viewer.py  dynamic_cloth.vcxproj  dynamic_cloth.vcxproj.filters  main.cpp  util.cpp  util.h
dynamic_cloth/physics/: Cloth.cpp  Cloth.h  ClothLoader.cpp  ClothSimulator.cpp  ClothSimulator.h  Particle.h
dynamic_cloth/solution/: nstep_0  nstep_1  nstep_10  nstep_100  nstep_1000  nstep_1001  nstep_1002  nstep_1003  nstep_1004  nstep_1005  nstep_1006  nstep_1007  nstep_1008  nstep_1009  nstep_101  nstep_1010  nstep_1011  nstep_1012  nstep_1013  nstep_1014  nstep_1015  nstep_1016  nstep_1017  nstep_1018  nstep_1019  nstep_102  nstep_1020  nstep_1021  nstep_1022  nstep_1023  nstep_1024  nstep_1025  nstep_1026  nstep_1027  nstep_1028  nstep_1029  nstep_103  nstep_1030  nstep_1031  nstep_1032  (+1118 more)
release/: CMakeCache.txt  Dynamic-Cloth  Makefile  cmake_install.cmake
src/: App.cpp  App.h  EventHandler.cpp  EventHandler.h  main.cpp
src/physics/: CMakeLists.txt  Cloth.cpp  Cloth.h  ClothLoader.cpp  ClothLoader.h  ClothSimulator.cpp  ClothSimulator.h  Makefile  Particle.cpp  Particle.h  cmake_install.cmake
src/util/: CMakeLists.txt  Makefile  cmake_install.cmake  util.cpp  util.h
